2001-01-29  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-art.el (gnus-article-mime-edit-exit): Use
	`buffer-substring-no-properties' instead of `format'.

2001-01-23  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* lisp/ptexinfmt.el: Support @letterpaper and @afivepaper.

2001-01-22  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 02.

	* Makefile.in (install-package-lisp): Use
	`install-without-compiling' instead of `install'.

	* lisp/Makefile.in (install): Use `install-without-compiling'.
	(install-without-compiling): New target.

2001-01-18  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 01.

2001-01-17  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/dgnushack.el (dgnushack-make-autoloads): Do nothing if the
	files for autoloads already exist.
	(dgnushack-unexporting-files): More useful message.

	* lisp/Makefile.in (install): Call `clever' before installing.
	(install-lisp): Remove.
	(clever): Check for whether the all elc files should be recompiled.

	* Makefile.in (xclever): New target.
	(install-package-lisp): Replace `install-lisp' with `install'.
	(install-package-ja): Replace `xlick' with `xclever'.
	(install-package): Ditto.

2001-01-17  KOSEKI Yoshinori  <kose@wizard.tamra.co.jp>

	* Makefile.in: Unset `PWD' for Meadow/NTEmacs.

2001-01-15  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnheader.el: Require `pces', `poem' and `std11' to reduce
	the required value of `recursive-load-depth-limit' for Emacs 21.

	* lisp/message.el (message-followup): Handle "Mail-Copies-To:"
	correctly.
	(message-get-reply-headers): Ditto.

2001-01-15  Keiichi Suzuki  <keiichi@nanap.org>

	* lisp/gnus-bbdb.el (gnus-bbdb/update-record): Save excursion
	while `bbdb-annotate-message-sender' is being done.

2001-01-14  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-art.el (gnus-treatment-function-alist): Use backquote.

2001-01-13  Kinji Itoh  <kinji-i@ma.neweb.ne.jp>
